@@ -1,3 +1,9 @@
+Thu Feb 18 01:38:04 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (locale_macros): Explicitly set groff's hyphenation
+	  language, to ensure that it only hyphenates languages it knows
+	  about (Debian bug #570247).
+
 Tue Feb 16 23:11:58 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* Version: 2.5.7.
